--- a/src/assets/config/config.json
+++ b/src/assets/config/config.json
@@ -52,6 +52,9 @@
 			"soundCloudIframeSrc": "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/974579098&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
 		},
 		{
+			"soundCloudIframeSrc": "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/921262960&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
+		},
+		{
 			"soundCloudIframeSrc": "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/65807635&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
 		},
 		{
